// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapCard.vue Events should receive and process correctly the event when dropdown is closed 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue Events should receive and process correctly the event when dropdown is open 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--quick-actions-open row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue Methods should close quick actions 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue Methods should open quick actions 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--quick-actions-open row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue Methods should show thumbnail error 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--no-hover row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 2`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue should render correct contents 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--selected row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tag dropdown 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <ul class="cell--map-name__bottom">
      <li class="map-tag"><span class="icon icon--tag"><img src="../../assets/icons/maps/tag.svg"></span></li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">Hi</router-link><span>, </span>
      </li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">Hello</router-link><span>, </span>
      </li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">CARTO Rules</router-link><span>, </span>
      </li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">Shows dropdown</router-link>
        <!---->
      </li>
    </ul>
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tags 1`] = `
<a href="http://example.com/viz/e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://hello.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <ul class="cell--map-name__bottom">
      <li class="map-tag"><span class="icon icon--tag"><img src="../../assets/icons/maps/tag.svg"></span></li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">Hi</router-link><span>, </span>
      </li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">Hello</router-link><span>, </span>
      </li>
      <li class="map-tag text is-small">
        <router-link to="[object Object]" class="is-txtSoftGrey">CARTO Rules</router-link>
        <!---->
      </li>
    </ul>
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;

exports[`MapCard.vue should show the map is shared 1`] = `
<a href="http://cdb.localhost.lan:3000/viz/hello.e97e0001-f1c2-425e-8c9b-0fb28da59200" class="row row--can-hover">
  <div class="cell cell--thumbnail"><img width="48" height="48" src="http://cdb.example.com/api/v1/map/static/named/tpl_e97e0001_f1c2_425e_8c9b_0fb28da59200/600/280.png" class="cell--thumbnail__img"> <span class="checkbox cell--thumbnail__checkbox"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../../assets/icons/common/checkbox.svg"></span></span></div>
  <div class="cell cell--map-name">
    <div class="cell--map-name__top"><span class="text is-caption is-txtGrey u-ellipsis cell--map-name__text"> First Map </span> <span class="card-favorite"><img svg-inline="" src="../../assets/icons/common/favorite.svg"></span></div>
    <!---->
  </div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.lastUpdate </span></div>
  <div class="cell"><span class="text is-small is-txtSoftGrey"> MapCard.views </span></div>
  <div class="cell cell--privacy"><span class="icon icon--privacy icon--public"></span>
    <p class="text is-small is-txtSoftGrey">
      MapCard.shared.PUBLIC
      <span>| MapCard.views</span></p>
  </div>
  <div class="cell cell--actions">
    <!---->
    <mapquickactions-stub map="[object Object]"></mapquickactions-stub>
  </div>
</a>
`;
